# MLOps_Project_Template

./: .gitignore  README.md  deploy.sh  sample.py  sample_local_saving.py
api/: .dockerignore  .env.example  Dockerfile  deploy.sh  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
api/app/: main.py
api/config/: paths.py
api/controllers/: api.py  dependencies.py
api/controllers/endpoints/: data.py  health.py  updates.py
api/models/: data_models.py
api/services/: data_service.py
api/utils/: data_manip.py  data_reader.py  response_builders.py
sp_worker/: .dockerignore  .env.example  Dockerfile  Dockerfile.mlflow  deploy.sh  docker-compose.yaml  docker-compose.yml  pyproject.toml
sp_worker/dags/: smart_pricing_dag_A.py  smart_pricing_dag_B.py  smart_pricing_dag_common.py  smart_pricing_dag_utils.py
sp_worker/src/config/: custom_logging.py  paths.py  settings.py
sp_worker/src/data_analytics/: ext_event_and_holidays.py  sub_charts.py  sub_charts_pipeline.py
sp_worker/src/data_ingestion/: data_processor.py  database_loader_1.py  database_loader_2.py  hotel_class.py  ingestion_pipeline.py  property_manager.py
sp_worker/src/features/shared_features/: __init__.py  categoricals.py  events.py  temporal.py  unseen_simulation.py
sp_worker/src/features/type_a/: basic.py  inference.py  training.py
sp_worker/src/features/type_b/: basic.py  inference.py  training.py
sp_worker/src/ml/: __init__.py
sp_worker/src/ml/baseline/: baseline_pipeline.py  mlflow_logger.py  params.py
sp_worker/src/ml/baseline/type_a/: __init__.py  inference.py  training.py
sp_worker/src/ml/baseline/type_b/: __init__.py  inference.py  training.py
sp_worker/src/ml/optimized_baseline/: fitted_params.json  opt_baseline_pipeline.py
sp_worker/src/utils/: data_manip.py  data_reader.py  data_saver.py
