[project]
name = "ai_server"
version = "0.2.0"
description = "AI Server with FastAPI"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "ipython>=7.22.0",
    "lightgbm>=4.6.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
    "scikit-learn>=0.24.0",
    "sqlalchemy>=2.0.41",
    "sshtunnel>=0.4.0",
    "uvicorn[standard]>=0.34.3",
    "psutil==5.9.6",
]




# SOLVE NO MODULES NAMED psutils